--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Phaser 3 Game</title>
 </head>
 <body style="margin: 0; padding: 0;">
+  <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
