--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body style="margin: 0; padding: 0;">
   <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
-  <script src="main.js"></script>
+  <script type= "module" src="index.js"></script>
 </body>
 </html>
