--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>hola</h1>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
-    <script type= "module" src="index.js"></script>
+    <script type= "module" src="src/index.js"></script>
   </body>
 </html>
