--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <title>Gamer</title>
   </head>
   <body>
-    <h1>hola</h1>
+    <h1>Hola</h1>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
-    <script type= "module" src="src/index.js"></script>
+    <script type= "module" src="/index.js"></script>
   </body>
 </html>
